<resources>
    <string name="tasks_at_title">Задачи на: %s</string>
    <string name="app_name">Менеджер задач</string>
    <string name="text_hint">Текст задачи</string>
    <string name="date_hint">Дата окончания</string>
    <string name="save_btn">Сохранить</string>
    <string name="description_hint">Описание</string>
    <string name="add_btn_content_description">Добавить задачу</string>
    <string name="activity_main_title">Задачи на сегодня</string>
    <string name="activity_main_title_unfinished">Невыполненные задачи</string>
    <string name="open">Список разделов меню</string>
    <string name="close">Список разделов меню</string>
    <string name="amount_of_tasks">Задач всего: %s из них выполнено: %s</string>
    <string name="outdated_tasks">Задач просрочено: %s</string>
    <string name="today_task">Задач на сегодня: %s из них выполнено: %s</string>
    <string name="amount_priority_tasks">Количество задач с высоким приоритетом: %s со средним приоритетом: %s с низким приоритетом: %s</string>
    <string name="task_name">Задача: %s</string>
    <string name="task_description">Описание: %s</string>
    <string name="task_date">Дата: %s</string>
    <string-array name="month_names">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>
</resources>